src/test/ui/impl-header-lifetime-elision/trait-elided.stderr
error[E0726]: implicit elided lifetime not allowed here
  --> $DIR/trait-elided.rs:5:6
   |
LL | impl MyTrait for u32 {
   |      ^^^^^^^- help: indicate the anonymous lifetime: `<'_>`

error: aborting due to previous error

